# fast_zero

./: pyproject.toml
fast_zero/: app.py  app_jinja.py  appy_html.py  models.py
fast_zero/templates/: index.html
migrations/versions/: afa115d3cf9c_create_models_user.py
tests/: conftest.py  test_app.py  test_db.py
